--- a/Javi/Videojuegos/angular.json
+++ b/Javi/Videojuegos/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "59a79491-df18-49b1-aeb9-984e646908b9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
